New style for home page

--- a/assets/langs/en.json
+++ b/assets/langs/en.json
@@ -5,5 +5,8 @@
   "Password": "Password",
   "Show": "Show",
   "Hide": "Hide",
-  "Server URL": "Server URL"
+  "Server URL": "Server URL",
+  "Latest Updates": "Latest Updates",
+  "News": "News",
+  "Gallery": "Gallery"
 }
