--- a/assets/langs/ar.json
+++ b/assets/langs/ar.json
@@ -5,5 +5,8 @@
   "Password": "كلمة السر",
   "Show": "إظهار",
   "Hide": "إخفاء",
-  "Server URL": "عنوان الخادم"
+  "Server URL": "عنوان الخادم",
+  "Latest Updates": "أخر التحديثات",
+  "News": "الأخبار",
+  "Gallery": "المعرض"
 }
