Change app theme and work on gallery_tab.dart and content_preview_view.dart

--- a/assets/langs/ar.json
+++ b/assets/langs/ar.json
@@ -8,5 +8,6 @@
   "Server URL": "عنوان الخادم",
   "Latest Updates": "أخر التحديثات",
   "News": "الأخبار",
-  "Gallery": "المعرض"
+  "Gallery": "المعرض",
+  "Info": "معلومات"
 }
