--- a/assets/langs/en.json
+++ b/assets/langs/en.json
@@ -8,5 +8,6 @@
   "Server URL": "Server URL",
   "Latest Updates": "Latest Updates",
   "News": "News",
-  "Gallery": "Gallery"
+  "Gallery": "Gallery",
+  "Info": "Info"
 }
