work on deviceId, cloud messages and change content photo to slider

--- a/assets/langs/ar.json
+++ b/assets/langs/ar.json
@@ -20,5 +20,17 @@
   "app version": "إصدار التطبيق",
   "Would you like to logout?": "هل تريد تسجيل الخروج؟",
   "No": "لا",
-  "Yes": "نعم"
+  "Yes": "نعم",
+  "weeks": "أسابيع",
+  "week": "اسبوع",
+  "days": "أيام",
+  "day": "يوم",
+  "hours": "ساعات",
+  "hour": "ساعة",
+  "minutes": "دقائق",
+  "minute": "دقيقة",
+  "seconds": "ثواني",
+  "second": "ثانية",
+  "ago": "منذ",
+  "Skip": "تخطي"
 }
