--- a/assets/langs/ar.json
+++ b/assets/langs/ar.json
@@ -32,5 +32,15 @@
   "seconds": "ثواني",
   "second": "ثانية",
   "ago": "منذ",
-  "Skip": "تخطي"
+  "Skip": "تخطي",
+
+  "Email is in use!": "البريد الالكتروني مستخدم",
+  "Profile updated successfully": "تم تحديث الملف الشخصي بنجاح",
+  "Error": "خطأ",
+  "Full Name": "الاسم الكامل",
+  "Update": "تحديث",
+  "Profile": "الملف الشخصي",
+  "Validation error": "خطأ في التحقق",
+  "Password must be greater than or equal to 8": "كلمة السر يجب ان تكون مساوية او اكبر من 8",
+  "Internal error occurred!": "حدث خطأ داخلي"
 }
