fix cookies bug

--- a/assets/langs/ar.json
+++ b/assets/langs/ar.json
@@ -54,5 +54,7 @@
   "Subject": "الموضوع",
   "Messages": "الرسائل",
   "Write message...": "اكتب رسالة...",
-  "selected": "تم اختيار"
+  "selected": "تم اختيار",
+  "Alftiyan School": "مدرسة الفتيان",
+  "Home": "الرئيسية"
 }
