--- a/assets/langs/en.json
+++ b/assets/langs/en.json
@@ -54,6 +54,8 @@
   "Subject": "Subject",
   "Messages": "Messages",
   "Write message...": "Write message...",
-  "selected":"selected"
+  "selected":"selected",
+  "Alftiyan School": "Alftiyan School",
+  "Home": "Home"
 
 }
