making student views

--- a/assets/langs/ar.json
+++ b/assets/langs/ar.json
@@ -55,6 +55,37 @@
   "Messages": "الرسائل",
   "Write message...": "اكتب رسالة...",
   "selected": "تم اختيار",
-  "Alftiyan School": "مدرسة الفتيان",
-  "Home": "الرئيسية"
+  "Alfityan School": "مدرسة الفتيان",
+  "Home": "الرئيسية",
+  "Students": "الطلاب",
+  "Transactions": "الحوالات",
+  "Extra Amounts": "المبالغ الاضافية",
+  "Code": "الرمز",
+  "Name": "الاسم",
+  "Voucher": "إيصال",
+  "Date": "التاريخ",
+  "Note": "ملاحظات",
+  "Amount": "المبلغ",
+  "No data.": "لا يوجد بيانات",
+  "Branch": "الفرع",
+  "Contract No": "رقم العقد",
+  "Year": "السنة",
+  "No: ": "رقم: ",
+  "Name: ": "الاسم: ",
+  "Class Code: ": "رمز الصف: ",
+  "Class Name: ": "اسم الصف: ",
+  "Section Code: ": "رمز الشعبة: ",
+  "Section Name: ": "اسم الشعبة: ",
+  "Student Information": "معلومات الطالب",
+  "Class: ": "الصف: ",
+  "Section: ": "الشعبة: ",
+  "Payments": "الدفعات",
+  "Installments": "الاقساط",
+  "Paid": "المدفوع",
+  "Balance": "الباقي",
+  "Fees": "المصاريف",
+  "Discount": "الخصم",
+  "Fee": "المصروف",
+  "Total": "المجموع",
+  "NO": "الرقم"
 }
