--- a/assets/langs/en.json
+++ b/assets/langs/en.json
@@ -55,7 +55,37 @@
   "Messages": "Messages",
   "Write message...": "Write message...",
   "selected":"selected",
-  "Alftiyan School": "Alftiyan School",
-  "Home": "Home"
-
+  "Alfityan School": "Alfityan School",
+  "Home": "Home",
+  "Students": "Students",
+  "Transactions": "Transactions",
+  "Extra Amounts": "Extra Amounts",
+  "Code": "Code",
+  "Name": "Name",
+  "Voucher": "Voucher",
+  "Date": "Date",
+  "Note": "Note",
+  "Amount": "Amount",
+  "No data.":  "No data.",
+  "Branch": "Branch",
+  "Contract No":"Contract No",
+  "Year": "Year",
+  "No: ": "No: ",
+  "Name: ": "Name: ",
+  "Class Code: ": "Class Code: ",
+  "Class Name: ": "Class Name: ",
+  "Section Code: ": "Section Code: ",
+  "Section Name: ":  "Section Name: ",
+  "Student Information": "Student Information",
+  "Class: ": "Class: ",
+  "Section: ": "Section: ",
+  "Payments": "Payments",
+  "Installments": "Installments",
+  "Paid": "Paid",
+  "Balance": "Balance",
+  "Fees": "Fees",
+  "Discount": "Discount",
+  "Fee": "Fee",
+  "Total": "Total",
+  "NO": "NO"
 }
