adding splash screen

--- a/assets/langs/ar.json
+++ b/assets/langs/ar.json
@@ -87,5 +87,6 @@
   "Discount": "الخصم",
   "Fee": "المصروف",
   "Total": "المجموع",
-  "NO": "الرقم"
+  "NO": "الرقم",
+  "Download as pdf": "تحميل كملف pdf"
 }
