--- a/assets/langs/en.json
+++ b/assets/langs/en.json
@@ -87,5 +87,6 @@
   "Discount": "Discount",
   "Fee": "Fee",
   "Total": "Total",
-  "NO": "NO"
+  "NO": "NO",
+  "Download as pdf": "Download as pdf"
 }
