--- a/assets/langs/ar.json
+++ b/assets/langs/ar.json
@@ -92,5 +92,6 @@
   "Announcement": "إعلان",
   "Write comment...": "اكتب تعليق...",
   "The message was not sent": "لم يتم إرسال الرسالة",
-  "Comment added successfully": "تم إضافة التعليق بنجاح"
+  "Comment added successfully": "تم إضافة التعليق بنجاح",
+  "Attachments": "الملحقات"
 }
