--- a/assets/langs/en.json
+++ b/assets/langs/en.json
@@ -92,5 +92,6 @@
   "Announcement": "Announcement",
   "Write comment...": "Write comment...",
   "The message was not sent": "The message was not sent",
-  "Comment added successfully": "Comment added successfully"
+  "Comment added successfully": "Comment added successfully",
+  "Attachments": "Attachments"
 }
