--- a/assets/langs/ar.json
+++ b/assets/langs/ar.json
@@ -93,5 +93,7 @@
   "Write comment...": "اكتب تعليق...",
   "The message was not sent": "لم يتم إرسال الرسالة",
   "Comment added successfully": "تم إضافة التعليق بنجاح",
-  "Attachments": "الملحقات"
+  "Attachments": "الملحقات",
+
+  "Other albums": "الألبومات الأخرى"
 }
