--- a/assets/langs/en.json
+++ b/assets/langs/en.json
@@ -93,5 +93,7 @@
   "Write comment...": "Write comment...",
   "The message was not sent": "The message was not sent",
   "Comment added successfully": "Comment added successfully",
-  "Attachments": "Attachments"
+  "Attachments": "Attachments",
+
+  "Other albums": "Other albums"
 }
