add student images and update splash screen

--- a/assets/langs/ar.json
+++ b/assets/langs/ar.json
@@ -95,5 +95,8 @@
   "Comment added successfully": "تم إضافة التعليق بنجاح",
   "Attachments": "الملحقات",
 
-  "Other albums": "الألبومات الأخرى"
+  "Other albums": "الألبومات الأخرى",
+  "Welcome to our school.": "أهلا بك إلى مدرستنا.",
+  "Lets get you started!": "فلنبدأ!", 
+  "Mobile no": "رقم الهاتف"
 }
