--- a/assets/langs/en.json
+++ b/assets/langs/en.json
@@ -95,5 +95,8 @@
   "Comment added successfully": "Comment added successfully",
   "Attachments": "Attachments",
 
-  "Other albums": "Other albums"
+  "Other albums": "Other albums",
+  "Welcome to our school.": "Welcome to our school.",
+  "Lets get you started!": "Let's get you started!",
+  "Mobile no": "Mobile no"
 }
