add album ranking section and filters comment to gallery_tab.dart

--- a/assets/langs/ar.json
+++ b/assets/langs/ar.json
@@ -98,5 +98,8 @@
   "Other albums": "الألبومات الأخرى",
   "Welcome to our school.": "أهلا بك إلى مدرستنا.",
   "Lets get you started!": "فلنبدأ!", 
-  "Mobile no": "رقم الهاتف"
+  "Mobile no": "رقم الهاتف",
+  "Cancel": "إلغاء",
+  "Confirm": "تأكيد",
+  "Filter": "تصفية"
 }
