--- a/assets/langs/en.json
+++ b/assets/langs/en.json
@@ -98,5 +98,8 @@
   "Other albums": "Other albums",
   "Welcome to our school.": "Welcome to our school.",
   "Lets get you started!": "Let's get you started!",
-  "Mobile no": "Mobile no"
+  "Mobile no": "Mobile no",
+  "Cancel": "Cancel",
+  "Confirm": "Confirm",
+  "Filter": "Filter"
 }
