--- a/assets/langs/ar.json
+++ b/assets/langs/ar.json
@@ -108,5 +108,7 @@
   "Warning": "تحذير",
   "All your registered devices will not receive notifications unless you signed in again.\nDo you want to proceed?": "لن تتلقى جميع أجهزتك المسجلة إشعارات إلا إذا قمت بتسجيل الدخول مرة أخرى.\nهل تريد المتابعة؟",
   "Continue": "استمرار",
-  "All devices removed": "تم إزالة جميع الأجهزة"
+  "All devices removed": "تم إزالة جميع الأجهزة",
+  "Password is not correct!": "كلمة المرور خاطئة!",
+  "Teacher": "المعلم"
 }
