--- a/assets/langs/en.json
+++ b/assets/langs/en.json
@@ -55,7 +55,7 @@
   "Messages": "Messages",
   "Write message...": "Write message...",
   "selected":"selected",
-  "Alfityan School": "Alfityan School",
+  "Retaal International Academy": "Retaal International Academy",
   "Home": "Home",
   "Students": "Students",
   "Transactions": "Transactions",
