Finish Student Degree Report

--- a/assets/langs/ar.json
+++ b/assets/langs/ar.json
@@ -110,5 +110,19 @@
   "Continue": "استمرار",
   "All devices removed": "تم إزالة جميع الأجهزة",
   "Password is not correct!": "كلمة المرور خاطئة!",
-  "Teacher": "المعلم"
+  "Teacher": "المعلم",
+  
+  "Degrees": "الدرجات",
+  "First Semester": "الفصل الأول",
+  "Second Semester": "الفصل الثاني",
+  "All Semesters": "جميع الفصول",
+  "First Period": "الفترة الأولى",
+  "Second Period": "الفترة الثانية",
+  "Third Period": "الفترة الثالثة",
+  "Fourth Period": "الفترة الرابعة",
+  "Semesters": "الفصول",
+  "Periods": "الفترات",
+  "Arabic": "عربي",
+  "English": "English",
+  "Download":"تحميل"
 }
