--- a/assets/langs/ar.json
+++ b/assets/langs/ar.json
@@ -120,6 +120,7 @@
   "Second Period": "الفترة الثانية",
   "Third Period": "الفترة الثالثة",
   "Fourth Period": "الفترة الرابعة",
+  "All Periods": "جميع الفترات",
   "Semesters": "الفصول",
   "Periods": "الفترات",
   "Arabic": "عربي",
