--- a/assets/langs/en.json
+++ b/assets/langs/en.json
@@ -120,6 +120,7 @@
   "Second Period": "Second Period",
   "Third Period": "Third Period",
   "Fourth Period": "Fourth Period",
+  "All Periods": "All Periods",
   "Semesters": "Semesters",
   "Periods": "Periods",
   "Arabic": "Arabic",
