make some changes

--- a/assets/langs/ar.json
+++ b/assets/langs/ar.json
@@ -125,5 +125,6 @@
   "Periods": "الفترات",
   "Arabic": "عربي",
   "English": "English",
-  "Download":"تحميل"
+  "Download":"تحميل",
+  "Title": "العنوان"
 }
