--- a/assets/langs/en.json
+++ b/assets/langs/en.json
@@ -125,5 +125,6 @@
   "Periods": "Periods",
   "Arabic": "Arabic",
   "English": "English",
-  "Download":"Download"
+  "Download":"Download",
+  "Title": "Title"
 }
