configure for alfityan

--- a/assets/langs/ar.json
+++ b/assets/langs/ar.json
@@ -55,7 +55,7 @@
   "Messages": "الرسائل",
   "Write message...": "اكتب رسالة...",
   "selected": "تم اختيار",
-  "Retaal International Academy": "اكاديمية ريتال الدولية",
+  "Alfityan School": "مدرسة الفتيان",
   "Home": "الرئيسية",
   "Students": "الطلاب",
   "Transactions": "الحوالات",
